# apc

./: .gitignore  CMakeLists.txt  README.md  babyWannaBeLaunchFile.bash  concat_sds_data.m  launch.sh  package.xml  package.xml~
MATLAB/: OBJ_OF_INTEREST_APC.m  OBJ_OF_INTEREST_APC.m~  concat_sds_data.m  demo_apc.m  getFilenames.m  imagelist_to_apc.m  masks2cls_apc.m  object_id_apc.m  recognition_results.mat  sample_data_apc.m  setup_svm_training_apc.m  startup_sds.m  train_refiner_apc.m  training_pipeline_apc.m  visualize_apc.m
MATLAB/apc_pretrained_models/svms/: A.mat  APC_11objAcc200.mat  APC_2obj.mat  B.mat  C.mat
MATLAB/cachedir/: scores.mat
MATLAB/feature_extractor/: rcnn_load_model.m
MATLAB/region_classification/: train_svms_apc.m
action/: MoveTo.action
collision_objects/: ._pod_lowres.stl  scoop.stl
launch/: amazon.launch
mat/: K.mat  analyze_mask.m  recognition_results.mat  rectify.m
matlab/: concat_sds_data.m
msg/: AddScoop.msg  MaskInfo.msg~  MatInfo.msg  RecInfo.msg  Recognition.msg  Recognition.msg~  Recognized.msg  Recognized.msg~  objRec.msg  recRes.msg  recRes.msg~
scripts/: apc.json  control_database.py  controller.py  heuristic_control.py  recognizeObjects_server.py  recognizeObjects_server.py~  test_recognize_object.py
src/: ActionBridge.cpp  AnalyzeMask.cpp  AnalyzeMask.cpp~  add_objects.cpp  move_arm.cpp  move_server.cpp  next_object.cpp  test_move.cpp
srv/: recognizeObjects.srv
